Added section graphic elements + styling

--- a/webroot/modules/custom/premium_theme_helper/translations/da.po
+++ b/webroot/modules/custom/premium_theme_helper/translations/da.po
@@ -15,3 +15,8 @@ msgstr ""
 "Language: da\n"
 "X-Generator: Poedit 1.8.11\n"
 
+msgid "Show graphic top"
+msgstr "Vis grafisk top"
+
+msgid "Show graphic bottom"
+msgstr "Vis grafisk bund"
