SIS2-97: Added profiles

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/translations/da.po
@@ -6,3 +6,6 @@ msgstr ""
 
 msgid "All @type pages"
 msgstr "Alle @type sider"
+
+msgid "Materials from @organization"
+msgstr "Materialer fra @organization"
