Added translation for "View all" and "View less"

--- a/webroot/modules/custom/premium_theme_helper/translations/da.po
+++ b/webroot/modules/custom/premium_theme_helper/translations/da.po
@@ -23,3 +23,9 @@ msgstr "Vis grafisk bund"
 
 msgid "subjects"
 msgstr "fag"
+
+msgid "View all"
+msgstr "Se alle"
+
+msgid "View less"
+msgstr "Se mindre"
