SIS2-287: Add missing translations for See site-specific materials from @name

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
@@ -17,3 +17,6 @@ msgstr ""
 
 msgid "Organizations"
 msgstr "Organisationer"
+
+msgid "See site-specific materials from @name"
+msgstr "Se stedsbestemte materialer fra @name"
