SIS-337: Alt tags for images, translation for section images. Footer images alt.

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/translations/da.po
@@ -9,3 +9,39 @@ msgstr "Alle @type sider"
 
 msgid "Materials from @organization"
 msgstr "Materialer fra @organization"
+
+msgid "Birds"
+msgstr "Fugle"
+
+msgid "Branches"
+msgstr "Grene"
+
+msgid "Deer"
+msgstr "Hjort"
+
+msgid "Reeds"
+msgstr "Dunhammer"
+
+msgid "Sea"
+msgstr "hav"
+
+msgid "Wind"
+msgstr "Vind"
+
+msgid "birds"
+msgstr "Fugle"
+
+msgid "branches"
+msgstr "Grene"
+
+msgid "deer"
+msgstr "Hjort"
+
+msgid "reeds"
+msgstr "Dunhammer"
+
+msgid "sea"
+msgstr "hav"
+
+msgid "wind"
+msgstr "Vind"
