SIS2-338: Translations and header alt tags.

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_relewise/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_relewise/translations/da.po
@@ -29,3 +29,11 @@ msgstr "Mest relevante"
 
 msgid "Most popular"
 msgstr "Mest populære"
+
+msgid "Search the entire site"
+msgstr "Søg på hele sitet"
+
+msgid "Search entire site"
+msgstr "Søg på hele sitet"
+
+
