SIS-277: Added x out of y for the ALL carousels, translations for map buttons, styling.

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
@@ -20,3 +20,6 @@ msgstr "Organisationer"
 
 msgid "See site-specific materials from @name"
 msgstr "Se stedsbestemte materialer fra @name"
+
+msgid "Go to map"
+msgstr "Gå til kortet"
