SIS2-386: Translations, font size adjustment, color change.

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
@@ -23,3 +23,6 @@ msgstr "Se stedsbestemte materialer fra @name"
 
 msgid "Go to map"
 msgstr "Gå til kortet"
+
+msgid "Latest news"
+msgstr "Sidste nyt"
