SIS2-284: Changed permissions on media upload for dot on map, blogs and articles. Added custom styling for node add and edit forms for anonymous, blogger and organization user roles. Set permissions on media library files to only show you own files for anonymous, blogger and organization users. Added danish labels and descriptions for fields.

--- a/webroot/modules/custom/premium_theme_helper/translations/da.po
+++ b/webroot/modules/custom/premium_theme_helper/translations/da.po
@@ -35,3 +35,9 @@ msgstr "Viser"
 
 msgid "out of"
 msgstr "ud af"
+
+msgid "One media item remaining."
+msgstr "Ét media element mangler."
+
+msgid "No media items are selected."
+msgstr "Der er ikke valgt noget media element."
