SIS2-572: Add translations

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/translations/da.po
@@ -93,3 +93,10 @@ msgstr "Vind"
 
 msgid "wind"
 msgstr "Vind"
+
+msgid "Short description of the image used by screen readers and displayed when the image is not loaded. This is important for accessibility."
+msgstr "Kort beskrivelse af billedet brugt af screen readers og crawlere."
+
+msgid "Confirm removal"
+msgstr "Bekræft fjernelse"
+
