SIS2-108: Show unpublished content on user page

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
@@ -29,3 +29,9 @@ msgstr "Sidste nyt"
 
 msgid "Business Card"
 msgstr "Visitkort"
+
+msgid "Latest unpublished content"
+msgstr "Seneste ikke udgivet indhold"
+
+msgid "Latest articles"
+msgstr "Seneste artikler"
