SIS2-464: Added external facet to articles and search overviews

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_relewise/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_relewise/translations/da.po
@@ -36,4 +36,5 @@ msgstr "Søg på hele sitet"
 msgid "Search entire site"
 msgstr "Søg på hele sitet"
 
-
+msgid "External material"
+msgstr "Ekstern materiale"
