--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
@@ -38,3 +38,10 @@ msgstr "Rediger visitkortside"
 
 msgid 'Required if you want to change the %mail or %pass below. <a href=":request_new_url" title="Send password reset instructions via email.">Reset your password</a>.'
 msgstr 'Påkrævet hvis du vil skifte %mail eller %pass nedenfor. <a href=":request_new_url" title="Send password reset instructions via email.">Nulstil dit password</a>.'
+
+msgid "Select media"
+msgstr "Vælg fil"
+
+msgid "You can select one @entity_type."
+msgstr "Du kan vælge ét element"
+
