SIS2-649: Added/changed titles and descriptions and markup + styling on article form

--- a/webroot/modules/custom/premium_theme_helper/translations/da.po
+++ b/webroot/modules/custom/premium_theme_helper/translations/da.po
@@ -47,3 +47,6 @@ msgstr "Ingen mediefiler er valgt."
 
 msgid "This must be an internal path such as /node/add. You can also start typing the title of a piece of content to select it. Enter <front> to link to the front page. Enter <nolink> to display link text only. Enter <button> to display keyboard-accessible link text only."
 msgstr "Dette skal være en intern sti såsom /node/add. Du kan også begynde at skrive titlen på et stykke indhold for at vælge det. Indtast <front> for at linke til forsiden."
+
+msgid "No @title added yet."
+msgstr "Der er ikke tilføjet en @title endnu."
