SIS2-689: Add translations for media embed dialog

--- a/webroot/modules/custom/premium_theme_helper/translations/da.po
+++ b/webroot/modules/custom/premium_theme_helper/translations/da.po
@@ -74,3 +74,6 @@ msgstr "Postnummer"
 
 msgid "City"
 msgstr "By"
+
+msgid "Original image size: @widthx@height"
+msgstr "Original billedestørrelse: @widthx@height <br />Ændr størrelsen på dit billede. 900px = fuld bredde, 450px = halv bredde. Formatet på billedet bevares."
