Added danish translations for "All"

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/translations/da.po
@@ -9,3 +9,6 @@ msgstr "Vis alle leksikonartikler med bogstavet @letter"
 
 msgid "No results found"
 msgstr "Ingen resultater fundet"
+
+msgid "All"
+msgstr "Alle"
