SIS2-710: Added longitude translation for map modal + added title to file links

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/translations/da.po
@@ -8,7 +8,7 @@ msgid "Latitude"
 msgstr "Breddegrad"
 
 msgid "Longitude"
-msgstr "Længde"
+msgstr "Længdegrad"
 
 msgid "Display map helpers"
 msgstr "Vis korthjælpere"
