SIS2-635-646: Force translation of button, hide field for green orgs

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/translations/da.po
@@ -35,3 +35,9 @@ msgstr "Seneste ikke udgivet indhold"
 
 msgid "Latest articles"
 msgstr "Seneste artikler"
+
+msgid "Select media"
+msgstr "Vælg fil"
+
+msgid "Upload"
+msgstr "Vælg fil"
