SIS2-676: Add possibility to show all filters on map, change order of filters

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/translations/da.po
@@ -13,4 +13,7 @@ msgstr "Længdegrad"
 msgid "Display map helpers"
 msgstr "Vis korthjælpere"
 
+msgid "Always show all filters"
+msgstr "Vis altid alle filtre"
+
 
