SIS2-706: Show all node types on user page under unpublished and published content

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
@@ -63,3 +63,5 @@ msgstr "Vis korthjælpere"
 msgid "Always show all filters"
 msgstr "Vis altid alle filtre"
 
+msgid "Latest published content"
+msgstr "Seneste udgivet indhold"
