SIS2-735: Adjust image fields permissions

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
@@ -83,3 +83,6 @@ msgstr "Juster til højre, og ombryd tekst"
 
 msgid "Select media"
 msgstr "Vælg fil"
+
+msgid "An image is required as list media"
+msgstr "Et billede er påkrævet som listemedie."
