SIS2-698: Move translation for All

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/translations/da.po
@@ -86,3 +86,6 @@ msgstr "Vælg fil"
 
 msgid "An image is required as list media"
 msgstr "Et billede er påkrævet som listemedie."
+
+msgid "All"
+msgstr "Alle"
